--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,11 +8,11 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "black>=25.1.0",
     "discord-py>=2.5.2",
+    "black>=25.1.0"
 ]
 
 [tool.black]
-line-length = 80
+line-length = 100
 target-version = ['py311']
 skip-string-normalization = true
