--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,8 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "discord-py>=2.5.2",
-    "black>=25.1.0"
+    "black>=25.1.0",
+    "schedule>=1.2.0"
 ]
 
 [tool.black]
